# TaskCascadence

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  README.md  SECURITY.md  d0tTino_cli.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
constellation-dashboard/: .eslintrc.js  jest.config.js  package-lock.json  package.json  tsconfig.json
constellation-dashboard/src/: Dashboard.test.tsx  Dashboard.tsx
examples/: orchestrated_mod_setup.py
examples/go_plugin/: README.md  go.mod  main.go
examples/python_plugin/: README.md  pyproject.toml
examples/rust_plugin/: Cargo.toml  README.md
task_cascadence/: __init__.py  async_utils.py  audit_recovery.py  capability_planner.py  config.py  http_utils.py  idea_store.py  intent.py  metrics.py  n8n.py  orchestrator.py  pipeline_registry.py  pointer_store.py  pointer_sync.py  research.py  stage_store.py  suggestion_store.py  task_store.py  temporal.py  transport.py  webhook.py
task_cascadence/api/: __init__.py
temporalio/: __init__.py  client.py  worker.py
tests/: __init__.py  conftest.py  test_ai_plan.py  test_api.py  test_api_pipeline.py  test_api_pointers.py  test_async_run.py  test_async_verify.py  test_audit_log.py  test_audit_recovery.py  test_builtin_webhook_tasks.py  test_calendar_persistence_error.py  test_calendar_workflow.py  test_capability_planner.py  test_cli.py  test_cli_pause.py  test_config_loader.py  test_config_paths.py  test_context_signal.py  test_cronyx_integration.py  test_cronyx_scheduler.py  test_cronyx_server_loader.py  test_d0ttino_plugin.py  test_dag_dependencies.py  test_dag_scheduler.py  test_dashboard.py  test_emitter.py  test_entrypoint_discovery.py  test_finance_explain.py  test_financial_decision_support.py  test_http_utils.py  test_idea_store.py  test_import.py  test_initialize_scheduler.py  test_intent.py  test_intent_cli.py  test_metrics.py  test_mypy.py  test_n8n.py  test_optional_research.py  (+37 more)
(+26 files in other folders)
