[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B"]

[tool.pytest.ini_options]
addopts = "-ra"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "task-cascadence"
version = "0.1.0"
authors = [{ name = "ACME", email = "info@example.com" }]
description = "Cascadence task orchestration framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "apscheduler",
    "fastapi",
    "uvicorn",
    "prometheus_client",
    "pytz",
    "pyyaml",
    "tzdata",
    "requests",
    "temporalio",
    "httpx<0.28",  # pinned for compatibility with temporalio
    "watchdog",
    "protobuf>=5.31,<6",
    "filelock",
]

[project.scripts]
task = "task_cascadence.cli:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "mypy",
    "types-requests",
    "types-PyYAML",
]
research = [
    "tino_storm",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
files = ["task_cascadence"]
exclude = "tests"

[[tool.mypy.overrides]]
module = ["requests", "yaml"]
ignore_missing_imports = false
